<resources>
    <string name="app_name">My Application</string>
    <string name="log_in">Log In</string>
    <string name="hi">Hi</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="sync_up">Sync Up</string>
    <string name="log_out">Logout</string>
    <string name="employee">Employee</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="description">Description</string>

</resources>